# golde

./: .gitignore  Cargo.toml  README.md  index.html
examples/: bind.rs  data_value.rs  demo.js  events.rs  feature.rs  jquery.rs  value.rs
examples/scripts/: calc.js
src/: app.js  event.rs  lib.rs  map.rs
src/script/: app.js
