[package]
name = "golde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }
fermi = { git = "https://github.com/dioxuslabs/fermi" }
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
doson = "0.1.5"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["desktop", "web"] }
fermi = { git = "https://github.com/dioxuslabs/fermi" }
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
doson = "0.1.5"

[patch.crates-io]
dioxus = { git = 'https://github.com/dioxuslabs/dioxus' }
