[package]
name = "golde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "golde-wasm-demo"
path = "src/bin/wasm.rs"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web", "desktop"] }
fermi = { git = "https://github.com/dioxuslabs/fermi" }
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
doson = "0.1.5"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus", features = ["web"] }
fermi = { git = "https://github.com/dioxuslabs/fermi" }
serde = { version = "1.0.126", features = ['derive'] }
serde_json = "1.0.64"
doson = "0.1.5"

[patch.crates-io]
dioxus = { git = 'https://github.com/dioxuslabs/dioxus' }